// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InlineAlert > snapshots > matches snapshot for dismissible alert 1`] = `
<div
  class="flex items-start gap-3 p-4 rounded-md border bg-info/10 border-info/20 text-foreground"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-info h-4 w-4 shrink-0 mt-0.5 text-info"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 16v-4"
    />
    <path
      d="M12 8h.01"
    />
  </svg>
  <div
    class="flex-1 text-sm"
  >
    Message
  </div>
  <button
    aria-label="Dismiss"
    class="shrink-0 rounded-sm opacity-70 hover:opacity-100 transition-opacity"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-x h-4 w-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
  </button>
</div>
`;

exports[`InlineAlert > snapshots > matches snapshot for info variant 1`] = `
<div
  class="flex items-start gap-3 p-4 rounded-md border bg-info/10 border-info/20 text-foreground"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-info h-4 w-4 shrink-0 mt-0.5 text-info"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <path
      d="M12 16v-4"
    />
    <path
      d="M12 8h.01"
    />
  </svg>
  <div
    class="flex-1 text-sm"
  >
    Message
  </div>
</div>
`;

exports[`InlineAlert > snapshots > matches snapshot for success variant 1`] = `
<div
  class="flex items-start gap-3 p-4 rounded-md border bg-success/10 border-success/20 text-foreground"
  role="alert"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-circle-check-big h-4 w-4 shrink-0 mt-0.5 text-success"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21.801 10A10 10 0 1 1 17 3.335"
    />
    <path
      d="m9 11 3 3L22 4"
    />
  </svg>
  <div
    class="flex-1 text-sm"
  >
    Message
  </div>
</div>
`;
